[package]
name = "jesterd20"
version = "0.2.0"
edition = "2021"
authors = ["nekowinston <hey@winston.sh>"]
description = "DND stat cruncher"
repository = "https://github.com/nekowinston/jesterd20"

[package.metadata.wix]
upgrade-guid = "FA7A7C66-D855-4283-9BE5-54DDE5779B00"
path-guid = "4D95AC09-36F9-446E-8117-49BFD496DB64"
license = false
eula = false

[dependencies]
catppuccin-egui = "4.0.0"
env_logger = { version = "0.11", default-features = false, features = [
  "auto-color",
  "humantime",
] }
eframe = "0.25.0"
egui_extras = "0.25.0"
fastrand = "2.0.1"

[profile.release]
lto = true
opt-level = 3
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
